[package]
name = "lyd"
version = "0.0.1-alpha.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bench]]
name = "next_block"
harness = false

[[bench]]
name = "fm"
harness = false

[dev-dependencies]
cpal = "0.15.2"
criterion = "0.4.0"

[dependencies]
smallvec = "1.10.0"
hashbrown = "0.13.2"
anyhow = "1.0.70"