[package]
name = "lyd"
version = "0.0.1-alpha.1"
edition = "2021"
keywords = [
	"audio",
    "music",
	"DSP",
	"synth",
    "synthesizer"
]
readme = "README.md"
license-file = "LICENSE"
description = "Music DSP library written in Rust with a focus on performance and flexibility."
repository = "https://github.com/chaosprint/lyd.git"
authors = ["Qichao Lan <chaosprint@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bench]]
name = "next_block"
harness = false

[[bench]]
name = "fm"
harness = false

[dev-dependencies]
cpal = "0.15.2"
criterion = "0.4.0"

[dependencies]
smallvec = "1.10.0"
hashbrown = "0.13.2"
anyhow = "1.0.70"